# Labs_El

./: .gitignore
Lab1.1/: Computation.pas  TimeToHour.pas
Lab1.2/: Lab2_addition.pas
Lab1.3/: Lab3_part1.pas
Lab1.5/: Arrays.pas
Lab2/: Lab2.pas
Lab2.1/: Programmirovanie_khz_cho_za_laba.docx  ~$ogrammirovanie_khz_cho_za_laba.docx  ~WRL2612.tmp
Lab2.1.1/: Drawing1.vsd  Programmirovanie_khz_cho_za_laba.docx  T1.pas
Lab2.2/: FileSaver.pas  Programmirovanie_khz_cho_za_laba.docx  SortingUtils.pas  file.txt  textfile.txt  typeFile.txt
Lab2.2.1/: FileSaver.pas  FileSaver.pcu  Menu.pas  PersonHandler — копия.pas  PersonHandler.pas  PersonHandler.pcu  SortingUtils.pas
Lab2.3/: Lab3_part1.pas  Report3.docx
Lab2.4/: Lab3_part1.pas  Report4.docx
Lab2.5/: Lab3_part1.pas  Report4.docx
Lab2.6/: Lab3_part1.pas  Report4.docx  ~$$Drawing10.~vsd
Lab3/: Lab3_part2.pas
Lab3.1/: CMakeLists.txt  Report1.docx  main.c
Lab3.2/: CMakeLists.txt  Report2.docx  main.c
Lab3.3/: CMakeLists.txt  Report4.docx  main.c
Lab3.4/: CMakeLists.txt  Report4.docx  main.c
Lab3.5/: CMakeLists.txt  Report5.docx  main.c  ~$eport5.docx  ~WRL0005.tmp
Lab3.6/: CMakeLists.txt
Lab4/: PrintFunctionTalbe.pas
Lab5/: Arrays.pas
Lab6/: CMakeLists.txt  Lab6.vsdx  Report6.docx  main.c  main.cpp  main.h  testMain.cpp
Lab6_new_pochinennoe/: CMakeLists.txt  main.h  testMain.cpp  testMain1.cpp
Lab7/: CMakeLists.txt  Report7.docx  main.cpp  main.h
Lab8/: CMakeLists.txt  Lab8.vsdx  Report6.docx  Report8.docx  main.cpp  main.h
Lab9/: CMakeLists.txt  Lab9.vsdx  Report9.docx  main.cpp  (+2 more)
(+142 files in other folders)
